--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
 <title>html1</title>
 </head>
 
-<body>
-	<h1>Heading 1</h1>
-	<h2>Heading 2</h2>
-	<h3>Heading 3</h3>
+<body style="background-color: lavender">
+	<h1 style="color:darkviolet;">Dogs</h1>
+	<hr>
+	<p title="Bad Roomba"> My dogs like to hide when the automatic vaccum is at work.</p>
+	<br> <img src="images/cage.jpg" alt="Hiding pups" width="156" height="208">
+		
+
+	<h2>The Sleepy Boys</h2>
+	<p>These guys <b>LOVE</b> to sleep.</p>
+	<img src="images/Duncan.jpg" alt="Duncan" width="156" height="208">
+	<img src="images/Bozo.jpg" alt="Bozo" width="156" height="208">
+	<img src="images/Bongo.jpg" alt="Bongo" width="156" height="208">
+	<h3>The Vigilant Baby Girl</h3>
+	<p> <i>Josie Girl</i> is <em>always</em> alert for intruders.</p>
+	<img src="images/Josie.jpg" alt="Hiding pups" width="156" height="208">
 </body>
 </html>
