--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1 style="color:darkviolet;">Dogs</h1>
 	<hr>
 	<p title="Bad Roomba"> My dogs like to hide when the automatic vaccum is at work.</p>
-	<br> <img src="images/cage.jpg" alt="Hiding pups" width="156" height="208">
+	<img src="images/cage.jpg" alt="Hiding pups" width="156" height="208">
 		
 
 	<h2>The Sleepy Boys</h2>
